--- a/index.html
+++ b/index.html
@@ -74,32 +74,32 @@
             </div>
             <div class="container"> 
                 <div class="item">
-                    <div class="box_one">
-                        <h6>
+                    <div class="box">
+                        <div>
                             <img src="images/astrology.svg" alt="">
-                        </h6>
+                        </div>
                         <p>Astrology</p>
                         <small>11 Courses</small>
                     </div>
-                    <div class="box_two">
-                        <h6>
+                    <div class="box">
+                        <div>
                             <img src="images/devlopment.svg" alt="">
-                        </h6>
+                        </div>
                         
                         <p>Development</p>
                         <small>12 Courses</small>
                     </div>
-                    <div class="box_three">
-                        <h6>
-                        <img src="images/marketing.svg" alt="">
-                        </h6>
+                    <div class="box">
+                        <div>
+                            <img src="images/marketing.svg" alt="">
+                        </div>
                         <p>Marketing</p>
                         <small>12 Courses</small>
                     </div>
-                    <div class="box_four">
-                        <h6>
-                        <img src="images/physics.svg" alt="">
-                        </h6>
+                    <div class="box">
+                        <div>
+                            <img src="images/physics.svg" alt="">
+                        </div>
                         <p>Physics</p>
                         <small>14 Courses</small>
                     </div>
@@ -123,7 +123,7 @@
                             <h6>
                                 <img src="images/bg.jpg" alt="">
                             </h6>
-                            <h4>Beginner's Guide to Design</h4>
+                            <h>Beginner's Guide to Design</h3>
                             <p>By Ronald Richard</p>
                             <ul>
                                 <li><img src="images/star.svg" alt=""></li>
@@ -141,7 +141,7 @@
                             <h6>
                                 <img src="images/bg.jpg" alt="">
                             </h6>
-                            <h4>Beginner's Guide to Design</h4>
+                            <h>Beginner's Guide to Design</h3>
                             <p>By Ronald Richard</p>
                             <ul>
                                 <li><img src="images/star.svg" alt=""></li>
@@ -158,7 +158,7 @@
                             <h6>
                                 <img src="images/bg.jpg" alt="">
                             </h6>
-                            <h4>Beginner's Guide to Design</h4>
+                            <h>Beginner's Guide to Design</h3>
                             <p>By Ronald Richard</p>
                             <ul>
                                 <li><img src="images/star.svg" alt=""></li>
@@ -166,7 +166,6 @@
                                 <li><img src="images/star.svg" alt=""></li>
                                 <li><img src="images/star.svg" alt=""></li>
                                 <li><img src="images/star.svg" alt=""></li>
-                                <span>(1200Ratings)</span>
                             </ul>
                             <small>22 Total Houres.155 lectures.Beginner</small>
                             <h4>$149.9</h4>
@@ -175,7 +174,7 @@
                             <h6>
                                 <img src="images/bg.jpg" alt="">
                             </h6>
-                            <h4>Beginner's Guide to Design</h4>
+                            <h>Beginner's Guide to Design</h3>
                             <p>By Ronald Richard</p>
                             <ul>
                                 <li><img src="images/star.svg" alt=""></li>
@@ -195,10 +194,28 @@
     <section id="instructors">
         <section class="wrapper">
             <div class="top">
-                <h4>Top instructors</h4>
-                <a href="#">See all</a>
+                <div class="left">
+                    <h4>Top instructors</h4>
+                </div>
+                <div class="right">
+                    <a href="#">See all</a>
+                </div>
             </div>
             <div class="items">
+                <div class="item">
+                    <img src="images/model-5.jpg" alt=""class="img">
+                    <h4>Ronald Richards</h4>
+                    <h6>UI/UX Designer</h6>
+                    <hr/>
+                    <span class="bottom">
+                        <small>
+                            <img src="images/star.svg" alt=""class="star">
+                            <p>4.9</p>
+                        </small>
+                        <p>2400 students</p>
+                    </span>
+                </div>
+
                 <div class="item">
                     <img src="images/model-5.jpg" alt=""class="img">
                     <h4>Ronald Richards</h4>
@@ -254,7 +271,6 @@
                         <p>2400 students</p>
                     </span>
                 </div>
-            </div>
         </section>
     </section> 
     <section id="about">
